# project_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/package/: __init__.py  main.py
tests/: conftest.py
